Life Steal and Molten Shot Update